--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,4 +1,10 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["node_modules", "test", "dist", "**/*spec.ts"]
+  "exclude": [
+    "test",
+    "dist",
+    "**/*spec.ts",
+    "cart-service",
+    "sql"
+  ]
 }
