--- a/.gitignore
+++ b/.gitignore
@@ -34,5 +34,5 @@ lerna-debug.log*
 !.vscode/extensions.json
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/config.yml
 !.elasticbeanstalk/*.global.yml
